<resources>
    <string name="app_name">Be consistent</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="check">Check</string>
    <string name="habit_description">description</string>
    <string name="add_habit">Add new habit</string>
    <string name="edit_habit">Edit existing habit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_added">Successfully added new habit</string>
    <string name="successfully_edited">Successfully edited habit</string>
    <string name="operation_unsuccessful">Operation unsuccessful</string>
    <string name="habit">Habit</string>
    <string name="streak">Streak</string>
    <string name="habit_marked_as_done">Habit marked as done</string>
    <string name="habit_done">Congratulations! %1$s is done!</string>
    <string name="go_to_habit_info">Go to habit info</string>
    <string name="edit">Edit</string>
    <string name="max_streak">Max Streak</string>
    <string name="visualization_of_the_streak">Visualization of the streak</string>
    <string name="delete_habit_confirmation">Are you sure you want to delete the habit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>