<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.HabitDetailsFragment">


    <TextView
        android:id="@+id/habit_text"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="My Habit" />

    <TextView
        android:id="@+id/streak_text"
        style="@style/TextAppearance.Material3.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/streak"
        app:layout_constraintBottom_toTopOf="@+id/streak_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/max_streak_text"
        style="@style/TextAppearance.Material3.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/max_streak"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/max_streak_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streak_value" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/streak_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/visualization_of_the_streak"
            android:src="@drawable/plant4"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/edit_btn"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:drawableTint="?colorOnSurfaceInverse"
        android:text="@string/edit"
        android:visibility="invisible"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_btn"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:drawableTint="?colorOnSurfaceInverse"
        android:text="@string/delete"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_btn" />

    <TextView
        android:id="@+id/streak_value"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/max_streak_text"
        app:layout_constraintEnd_toEndOf="@+id/streak_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/streak_text"
        app:layout_constraintTop_toBottomOf="@+id/streak_text"
        tools:text="24" />

    <TextView
        android:id="@+id/max_streak_value"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/max_streak_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/max_streak_text"
        app:layout_constraintTop_toBottomOf="@+id/max_streak_text"
        tools:text="50" />

</androidx.constraintlayout.widget.ConstraintLayout>

